--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+# DATASOURCE MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/myahona_test?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+
+
+seed_database = true
+
+attachment_url= http://localhost:8080/attachments/
+
+#attachment_path= C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0\\webapps\\attachments\\
+
+#attachment_path= /usr/local/apache-tomcat9/webapps/attachments/
+
+attachment_path= /opt/tomcat/webapps/attachments/
+
+security.jwt.token.secret-key=hr_water
+
+security.jwt.token.expire-length=300000
+
+server.port=8085
+
 
