--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
-seed_database = true
+seed_database = false
 
 attachment_url= http://localhost:8080/attachments/
 
