--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<version>20160810</version>
 		</dependency>
 		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
