--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 # DATASOURCE MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/myahona_test?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/myahona_test?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# DATASOURCE Postgres
+spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://156.67.216.30:5432/myahona_test
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/myahona_test
+spring.datasource.username=postgres
+spring.datasource.password=123456789dabbas
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 
-seed_database = false
+seed_database = true
 
 attachment_url= http://localhost:8080/attachments/
 
