--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 
-seed_database = true
+seed_database = false
 
 attachment_url= http://localhost:8080/attachments/
 
@@ -32,6 +32,8 @@ attachment_path= /opt/tomcat/webapps/attachments/
 security.jwt.token.secret-key=hr_water
 
 security.jwt.token.expire-length=300000
+
+to_email = abdallah.dabbas.93@hotmail.com
 
 server.port=8085
 
